sampleapp2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app2-service
  namespace: ezzatelshazly
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
