sample-app2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app2-ingress
  namespace: ezzatelshazly
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sample-app2-route-ezzatelshazly.apps.apps.ocpuat.devopsconsulting.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app2-service
            port:
              number: 8080
