sample-app2-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app2-route
  namespace: ezzatelshazly
spec:
  to:
    kind: Service
    name: sample-app2-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
